# Crew-bot

bot/: README.md  project_plan.md  pyproject.toml  report.md
bot/src/bot/: crew.py  main.py
bot/src/bot/config/: agents.yaml  tasks.yaml
