[project]
name = "bot"
version = "0.1.0"
description = "bot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "serpapi",
]

[project.scripts]
bot = "bot.main:run"
run_crew = "bot.main:run"
train = "bot.main:train"
replay = "bot.main:replay"
test = "bot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv.sources]
serpapi = { git = "https://github.com/serpapi/serpapi-python.git" }
